Update LK CI config

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -12,106 +12,9 @@ jobs:
       matrix:
         include:
           # build a bunch of common projects with debuglevel 2
-          - project: qemu-virt-arm32-test
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 2
-          - project: qemu-virt-arm64-test
+          - project: land-test
             toolchain: aarch64-elf-7.5.0-Linux-x86_64
             debug: 2
-          - project: qemu-virt-arm32-minimal
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 2
-          - project: vim2-test
-            toolchain: aarch64-elf-7.5.0-Linux-x86_64
-            debug: 2
-          - project: zybo-test
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 2
-          - project: rpi2-test
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 2
-          - project: uzed-test
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 2
-          - project: stm32746g-eval2-test
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 2
-          - project: stm32f429i-disco-test
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 2
-          - project: stm32f746g-disco-test
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 2
-          - project: stm32f4-discovery-test
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 2
-          - project: stellaris-launchpad-test
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 2
-          - project: nrf51-pca10028-test
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 2
-          - project: nucleo-f072rb
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 2
-          - project: pico-test
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 2
-          - project: qemu-microblaze-test
-            toolchain: microblaze-elf-7.5.0-Linux-x86_64
-            debug: 2
-          - project: qemu-mips-test
-            toolchain: mips-elf-7.5.0-Linux-x86_64
-            debug: 2
-          - project: qemu-virt-riscv32-test
-            toolchain: riscv32-elf-7.5.0-Linux-x86_64
-            debug: 2
-          - project: qemu-virt-riscv64-test
-            toolchain: riscv64-elf-7.5.0-Linux-x86_64
-            debug: 2
-          - project: qemu-virt-riscv64-supervisor-test
-            toolchain: riscv64-elf-7.5.0-Linux-x86_64
-            debug: 2
-          - project: sifive-e-test
-            toolchain: riscv32-elf-7.5.0-Linux-x86_64
-            debug: 2
-          - project: sifive-unleashed-test
-            toolchain: riscv64-elf-7.5.0-Linux-x86_64
-            debug: 2
-          - project: pc-x86-test
-            toolchain: i386-elf-7.5.0-Linux-x86_64
-            debug: 2
-          - project: pc-x86-64-test
-            toolchain: x86_64-elf-7.5.0-Linux-x86_64
-            debug: 2
-          # build some in release mode (DEBUG=0)
-          - project: qemu-virt-arm32-test
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 0
-          - project: qemu-virt-arm64-test
-            toolchain: aarch64-elf-7.5.0-Linux-x86_64
-            debug: 0
-          - project: stm32f746g-disco-test
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 0
-          - project: pico-test
-            toolchain: arm-eabi-7.5.0-Linux-x86_64
-            debug: 0
-          - project: pc-x86-test
-            toolchain: i386-elf-7.5.0-Linux-x86_64
-            debug: 0
-          - project: pc-x86-64-test
-            toolchain: x86_64-elf-7.5.0-Linux-x86_64
-            debug: 0
-          - project: qemu-microblaze-test
-            toolchain: microblaze-elf-7.5.0-Linux-x86_64
-            debug: 0
-          - project: qemu-mips-test
-            toolchain: mips-elf-7.5.0-Linux-x86_64
-            debug: 0
-          - project: sifive-e-test
-            toolchain: riscv32-elf-7.5.0-Linux-x86_64
-            debug: 0
 
     env:
       PROJECT: ${{ matrix.project }}
